# TarefaEbacFinal

./: Dockerfile  docker-compose.yml  main.py  pokemon.db  pyproject.toml
.github/workflows/: python-app.yml
tests/: test_rota.py
